--- a/src/ir/BUILD
+++ b/src/ir/BUILD
@@ -21,24 +21,26 @@ load("//build_defs:test_helpers.bzl", "extracted_datalog_string_test")
 
 cc_library(
     name = "new_ir",
-    srcs = [
-        "blah.cc",
-    ],
     hdrs = [
-        "access_path_v2.h",
-        "data_decl.h",
-        "derives_from_operation.h",
-        "multi_operation.h",
+        "context.h",
         "operation.h",
-        "sql_query_operation.h",
         "storage.h",
-        "tag_claim_operation.h",
+        "value.h",
     ],
     deps = [
         "//src/ir/types",
         "@absl//absl/container:flat_hash_map",
         "@absl//absl/strings",
     ],
+)
+
+cc_test(
+    name = "new_ir_test",
+    srcs = ["new_ir_test.cc"],
+    deps = [
+        ":new_ir",
+        "//src/common/testing:gtest",
+    ]
 )
 
 cc_library(
